--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,7 +33,7 @@ security:
   access_control:
     # - { path: ^/admin, roles: ROLE_ADMIN }
     - { path: ^/compte, roles: ROLE_USER }
-
+    - { path: ^/commande, roles: ROLE_USER }
 when@test:
   security:
     password_hashers:
